# dtab

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.txt  Dockerfile  LICENSE  Main.hs  README  README.markdown  README.md  Setup.lhs  Test.hs  build-docker  dta2fof.hs  dta2magma.hs  dtab.cabal  stack.yaml
src/Data/: DTA.hs
src/Data/DTA/: Base.hs  Binary.hs  Crypt.hs  Lex.x  Parse.hs  Parse.y  PrettyPrint.hs  Serialize.hs  Test.hs
src/Data/DTA/Serialize/: Magma.erb  Magma.hs  RB3.erb  RB3.hs  make_data.rb
