Name:               dtab
Version:            0.8
Synopsis:           Harmonix (Guitar Hero, Rock Band) DTA/DTB metadata library.
Description:        The DTA/DTB format is an internal metadata format used by
                    Harmonix Music Systems in their game series, including
                    Guitar Hero, Rock Band, and Karaoke Revolution games. This
                    library provides read/write functions for both the binary
                    (DTB) and plain text (DTA) versions of the format, as well
                    as the encryption algorithm used for DTB files found on game
                    discs. Also included is an executable which accomplishes the
                    same functions.
License:            GPL
License-file:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4 && <= 5, bytestring, transformers,
                    data-binary-ieee754, binary, array, pretty, QuickCheck,
                    containers
  Exposed-modules:  Data.DTA
                    Data.DTA.Crypt
                    Data.DTA.Serialize
                    Data.DTA.Serialize.Magma
  Other-modules:    Data.DTA.Base
                    Data.DTA.Lex
                    Data.DTA.Parse
                    Data.DTA.PrettyPrint
  hs-source-dirs:   src
  ghc-options:      -Wall

Executable dtab
  Build-Depends:    base >= 4 && <= 5, dtab, bytestring
  Other-modules:    Paths_dtab
  Main-Is:          Main.hs

Test-suite tests
  Type:             exitcode-stdio-1.0
  Main-is:          Test.hs
  Build-depends:    base >= 4 && <= 5, dtab, bytestring, binary, QuickCheck
  Ghc-options:      -Wall

Source-Repository head
  Type:             git
  Location:         git://github.com/onyxite/dtab.git
