name:               dtab
version:            0.8
synopsis:           Harmonix (Guitar Hero, Rock Band) DTA/DTB metadata library
description:

  Read/write/encryption functions for the DTA/DTB metadata format used by
  Harmonix Music Systems in their games, including the Guitar Hero, Rock Band,
  and Karaoke Revolution series. Provides both a library and executable.

license:            GPL
license-file:       LICENSE
author:             Michael Tolly
maintainer:         miketolly@gmail.com
build-type:         Simple
cabal-version:      >= 1.10
category:           Data

library
  build-depends:
    base >= 4 && < 5
    , bytestring
    , transformers
    , data-binary-ieee754
    , binary
    , array
    , pretty
    , containers
    , process >= 1.2 && < 1.3
    -- for Setup.lhs
  exposed-modules:
    Data.DTA
    Data.DTA.Crypt
    Data.DTA.Serialize
    Data.DTA.Serialize.Magma
    Data.DTA.Serialize.RB3
  other-modules:
    Data.DTA.Base
    Data.DTA.Lex
    Data.DTA.Parse
    Data.DTA.PrettyPrint
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   Haskell2010

Executable dtab
  build-depends:
    base >= 4 && < 5
    , dtab
    , bytestring
  other-modules:      Paths_dtab
  Main-Is:            Main.hs
  ghc-options:        -Wall
  default-language:   Haskell2010

source-repository head
  type:               git
  location:           https://github.com/mtolly/dtab
